cluster/home/mosquitto/006-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mosquitto
  namespace: mosquitto
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
#  tls: true
  
  entryPoints:
    - mqtt
  routes:
    - kind: Rule
      match: HostSNI("mqtt.meba.xyz")
      services:
        - name: mosquitto
          port: 1883
  
  tls:
    domains:
    - main: mqtt.meba.xyz
    secretName: tls-mqtt
